# ProyectoRedes

./: .gitignore  README.md  analizador.h  captura_basica.cpp  captura_parce.cpp  lista_interfaces.cpp  mio.cpp
analizador-qt/: CMakeLists.txt  analizador.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paquete_info.h  pcapworker.cpp  pcapworker.h
